# Aganith---Python-Take-Home-Exercise

PubMed_Task_AG/: README.md  pyproject.toml  results.csv
PubMed_Task_AG/pubmed_fetcher/: get_papers_list.py
