
[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "A tool to fetch PubMed papers with pharmaceutical/biotech affiliations"
authors = ["soumyapratapsingh <soumyapratapsingh.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.83"
pandas = "^2.2.2"
requests = "^2.32.3"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.get_papers_list:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"